[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "ledger-sandbox"
version = "0.1.0"
description = "A small budgeting ledger library + FastAPI service used as a Dockerized evaluation sandbox."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Evaluation Sandbox" }]

# These pins are intentionally version-sensitive. The library and the service
# rely on Pydantic v2 APIs (model_validate / model_dump / field_validator),
# and FastAPI/Starlette/httpx must line up for the TestClient to import.
# A small drift in any of these (see BROKEN_BRANCH.md) breaks the build.
dependencies = [
    "fastapi==0.111.0",
    "starlette==0.37.2",
    "pydantic==1.10.13",
    "python-dateutil==2.9.0.post0",
    "httpx==0.27.0",
    "uvicorn==0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
]

[project.scripts]
ledger-serve = "ledger.api:run"

[tool.hatch.build.targets.wheel]
packages = ["src/ledger"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["ledger"]
branch = true
